* update linux-4k to 5.18.arch1-1

--- a/linux-4k/config
+++ b/linux-4k/config
@@ -299,10 +299,10 @@ CONFIG_CPU_LITTLE_ENDIAN=y
 CONFIG_PPC64_BOOT_WRAPPER=y
 CONFIG_64BIT=y
 CONFIG_MMU=y
-CONFIG_ARCH_MMAP_RND_BITS_MAX=29
-CONFIG_ARCH_MMAP_RND_BITS_MIN=14
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=13
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=7
+CONFIG_ARCH_MMAP_RND_BITS_MAX=33
+CONFIG_ARCH_MMAP_RND_BITS_MIN=18
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=17
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
 CONFIG_NR_IRQS=512
 CONFIG_NMI_IPI=y
 CONFIG_STACKTRACE_SUPPORT=y
@@ -355,7 +355,6 @@ CONFIG_HV_PERF_CTRS=y
 CONFIG_IBMVIO=y
 CONFIG_PAPR_SCM=m
 CONFIG_PPC_SVM=y
-CONFIG_PPC_VAS=y
 CONFIG_KVM_GUEST=y
 CONFIG_EPAPR_PARAVIRT=y
 CONFIG_PPC_HASH_MMU_NATIVE=y
@@ -463,11 +462,10 @@ CONFIG_ILLEGAL_POINTER_VALUE=0x5deadbeef0000000
 CONFIG_ARCH_MEMORY_PROBE=y
 CONFIG_PPC_4K_PAGES=y
 # CONFIG_PPC_64K_PAGES is not set
-CONFIG_PPC_PAGE_SHIFT=16
+CONFIG_PPC_PAGE_SHIFT=12
 CONFIG_THREAD_SHIFT=14
-CONFIG_DATA_SHIFT=16
-CONFIG_FORCE_MAX_ZONEORDER=9
-CONFIG_PPC_SUBPAGE_PROT=y
+CONFIG_DATA_SHIFT=12
+CONFIG_FORCE_MAX_ZONEORDER=13
 # CONFIG_PPC_PROT_SAO_LPAR is not set
 CONFIG_PPC_COPRO_BASE=y
 CONFIG_SCHED_SMT=y
@@ -606,7 +604,8 @@ CONFIG_HAVE_IRQ_EXIT_ON_IRQ_STACK=y
 CONFIG_HAVE_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
-CONFIG_ARCH_MMAP_RND_BITS=14
+CONFIG_ARCH_MMAP_RND_BITS=18
+CONFIG_PAGE_SIZE_LESS_THAN_64KB=y
 CONFIG_PAGE_SIZE_LESS_THAN_256KB=y
 CONFIG_HAVE_RELIABLE_STACKTRACE=y
 CONFIG_HAVE_ARCH_NVRAM_OPS=y
@@ -3580,6 +3579,7 @@ CONFIG_MHI_WWAN_MBIM=m
 CONFIG_RPMSG_WWAN_CTRL=m
 # end of Wireless WAN
 
+# CONFIG_VMXNET3 is not set
 CONFIG_USB4_NET=m
 # CONFIG_NETDEVSIM is not set
 CONFIG_NET_FAILOVER=m
@@ -9166,6 +9166,7 @@ CONFIG_EXFAT_FS=m
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_NTFS_FS=m
 # CONFIG_NTFS_DEBUG is not set
+# CONFIG_NTFS_RW is not set
 CONFIG_NTFS3_FS=m
 CONFIG_NTFS3_64BIT_CLUSTER=y
 CONFIG_NTFS3_LZX_XPRESS=y
@@ -9666,8 +9667,6 @@ CONFIG_CRYPTO_HASH_INFO=y
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_NX=y
 CONFIG_CRYPTO_DEV_NX_COMPRESS=m
-CONFIG_CRYPTO_DEV_NX_COMPRESS_PSERIES=m
-CONFIG_CRYPTO_DEV_NX_COMPRESS_POWERNV=m
 # CONFIG_CRYPTO_DEV_ATMEL_ECC is not set
 # CONFIG_CRYPTO_DEV_ATMEL_SHA204A is not set
 # CONFIG_CRYPTO_DEV_NITROX_CNN55XX is not set
