--- a/linux-ppc64/config
+++ b/linux-ppc64/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/powerpc 5.18.0-arch1 Kernel Configuration
+# Linux/powerpc 5.18.3-arch1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="powerpc64-unknown-linux-gnu-gcc (GCC) 12.1.0"
 CONFIG_CC_IS_GCC=y
@@ -15,6 +15,7 @@ CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
+CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_PAHOLE_VERSION=123
@@ -2034,6 +2035,7 @@ CONFIG_FW_CFG_SYSFS=m
 CONFIG_FW_CFG_SYSFS_CMDLINE=y
 CONFIG_CS_DSP=m
 # CONFIG_GOOGLE_FIRMWARE is not set
+CONFIG_EFI_DISABLE_RUNTIME=y
 
 #
 # Tegra firmware driver
@@ -2683,6 +2685,7 @@ CONFIG_FIREWIRE_NOSY=m
 
 CONFIG_MACINTOSH_DRIVERS=y
 CONFIG_ADB_PMU=y
+CONFIG_ADB_PMU_EVENT=y
 CONFIG_ADB_PMU_LED=y
 CONFIG_ADB_PMU_LED_DISK=y
 CONFIG_PMAC_SMU=y
@@ -5469,7 +5472,7 @@ CONFIG_DVB_BUDGET_CORE=m
 CONFIG_DVB_BUDGET=m
 CONFIG_DVB_BUDGET_CI=m
 CONFIG_DVB_BUDGET_AV=m
-CONFIG_RADIO_ADAPTERS=y
+CONFIG_RADIO_ADAPTERS=m
 CONFIG_RADIO_MAXIRADIO=m
 CONFIG_RADIO_SAA7706H=m
 CONFIG_RADIO_SHARK=m
