* update linux-lts to 5.10.121-1

--- a/linux-lts/config
+++ b/linux-lts/config
@@ -9234,8 +9234,8 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 #
 # powerpc Debugging
 #
-# CONFIG_PPC_DISABLE_WERROR is not set
-CONFIG_PPC_WERROR=y
+CONFIG_PPC_DISABLE_WERROR=y
+# CONFIG_PPC_WERROR is not set
 CONFIG_PRINT_STACK_DEPTH=64
 CONFIG_PPC_EMULATED_STATS=y
 CONFIG_JUMP_LABEL_FEATURE_CHECKS=y
