* update powerpc64le-unknown-linux-gnu-linux-api-headers to 5.17.5-1

--- a/cross-compilers/powerpc64le-linux-gnu-linux-api-headers/PKGBUILD
+++ b/cross-compilers/powerpc64le-linux-gnu-linux-api-headers/PKGBUILD
@@ -7,16 +7,17 @@
 # AUR Maintainer: Stefan Schmidt <thrimbor.github@gmail.com>
 
 _target_arch=powerpc64le
-_target=${_target_arch}-linux-gnu
+_target=${_target_arch}-unknown-linux-gnu
 pkgname=${_target}-linux-api-headers
-pkgver=4.20.12
+pkgver=5.17.5
 pkgrel=1
 pkgdesc="Kernel headers sanitized for use in userspace (${_target})"
 arch=(any)
 url='http://www.gnu.org/software/libc'
 license=(GPL2)
-source=(https://www.kernel.org/pub/linux/kernel/v4.x/linux-${pkgver}.tar.xz)
-md5sums=('edd3015435d60598b99cf6aaf223710e')
+makedepends=(rsync make)
+source=(https://www.kernel.org/pub/linux/kernel/v5.x/linux-${pkgver}.tar.xz)
+sha256sums=('9bbcd185b94436f9c8fe977fa0e862f60d34003562327fcebb27c9fa342fe987')
 validpgpkeys=('ABAF11C65A2970B130ABE3C479BE3E4300411886'   # Linus Torvalds
               '647F28654894E3BD457199BE38DBBDC86092693E')  # Greg Kroah-Hartman
 
@@ -24,7 +25,6 @@ build() {
   cd linux-${pkgver}
 
   make ARCH=powerpc mrproper
-  make ARCH=powerpc headers_check
 }
 
 package() {
