--- a/cross-compilers/powerpc64le-linux-gnu-gcc-stage2/PKGBUILD
+++ b/cross-compilers/powerpc64le-linux-gnu-gcc-stage2/PKGBUILD
@@ -1,3 +1,4 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Contributor: Alexander 'hatred' Drozdov <adrozdoff@gmail.com>
 # Contributor: toha257 <toha257@gmail.com>
 # Contributor: Allan McRae <allan@archlinux.org>
@@ -5,41 +6,31 @@
 # Contributor: Tavian Barnes <tavianator@tavianator.com>
 # Maintainer: Tavian Barnes <tavianator@tavianator.com>
 
-_target="powerpc64le-linux-gnu"
+_target=powerpc64le-unknown-linux-gnu
 pkgname=${_target}-gcc-stage2
-pkgver=8.3.0
+pkgver=12.1.0
 _majorver=${pkgver:0:1}
-_islver=0.20
 pkgrel=1
 pkgdesc="The GNU Compiler Collection. Stage 2 for toolchain building (${_target})"
-arch=(i686 x86_64)
+arch=(x86_64 powerpc)
 license=(GPL LGPL FDL custom)
 url='http://gcc.gnu.org'
-depends=("${_target}-binutils>=2.32-1" "${_target}-glibc-headers>=2.29-1" libmpc zlib)
+depends=("${_target}-binutils>=2.38-1" "${_target}-glibc-headers>=2.35-2" libmpc zlib)
 options=(!emptydirs !distcc !strip)
 conflicts=("${_target}-gcc-stage1")
 replaces=("${_target}-gcc-stage1")
 provides=("${_target}-gcc-stage1=${pkgver}")
-source=(https://sources.archlinux.org/other/gcc/gcc-${pkgver/+/-}.tar.xz{,.sig}
-        http://isl.gforge.inria.fr/isl-${_islver}.tar.bz2)
+source=(https://ftp.gnu.org/gnu/gcc/gcc-${pkgver}/gcc-${pkgver}.tar.xz{,.sig})
 validpgpkeys=(F3691687D867B81B51CE07D9BBE43771487328A9  # bpiotrowski@archlinux.org
               86CFFCA918CF3AF47147588051E8B148A9999C34  # evangelos@foutrelis.com
               13975A70E63C361C73AE69EF6EEB81F8981C74C7  # richard.guenther@gmail.com
-              33C235A34C46AA3FFB293709A328C3A2C3C45C06) # Jakub Jelinek <jakub@redhat.com>
-sha256sums=('64baadfe6cc0f4947a84cb12d7f0dfaf45bb58b7e92461639596c21e02d97d2c'
-            'SKIP'
-            'b587e083eb65a8b394e833dea1744f21af3f0e413a448c17536b5549ae42a4c2')
-
-_svnrev=259195
-_svnurl=svn://gcc.gnu.org/svn/gcc/branches/gcc-${_majorver}-branch
-_libdir=usr/lib/gcc/$CHOST/${pkgver%%+*}
+              D3A93CAD751C2AF4F8C7AD516C35B99309B5FA62) # Jakub Jelinek <jakub@redhat.com>
+sha256sums=('62fd634889f31c02b64af2c468f064b47ad1ca78411c45abe6ac4b5f8dd19c7b'
+            'SKIP')
 
 prepare() {
   [[ ! -d gcc ]] && ln -s gcc-${pkgver/+/-} gcc
   cd gcc
-
-  # link isl for in-tree build
-  ln -s ../isl-${_islver} isl
 
   # Do not run fixincludes
   sed -i 's@\./fixinc\.sh@-c true@' gcc/Makefile.in
@@ -55,8 +46,10 @@ build() {
 
   # using -pipe causes spurious test-suite failures
   # http://gcc.gnu.org/bugzilla/show_bug.cgi?id=48565
-  CFLAGS=${CFLAGS/-pipe/}
+  CFLAGS=${CFLAGS/-pipe}
+  CFLAGS=${CFLAGS/-Wformat -Werror=format-security/}
   CXXFLAGS=${CXXFLAGS/-pipe/}
+  CXXFLAGS=${CXXFLAGS/ -Wformat -Werror=format-security/}
 
   "$srcdir/gcc/configure" --prefix=/usr \
       --program-prefix=${_target}- \
@@ -72,7 +65,6 @@ build() {
       --disable-shared \
       --disable-threads \
       --with-system-zlib \
-      --with-isl \
       --enable-__cxa_atexit \
       --disable-libunwind-exceptions \
       --enable-clocale=gnu \
@@ -94,7 +86,7 @@ build() {
       --host=${CHOST} \
       --build=${CHOST}
 
-  make all-gcc all-target-libgcc
+  make STAGE1_CFLAGS="-O2" all-gcc all-target-libgcc
 }
 
 package() {
