--- a/cross-compilers/powerpc64-unknown-linux-gnu-binutils/PKGBUILD
+++ b/cross-compilers/powerpc64-unknown-linux-gnu-binutils/PKGBUILD
@@ -6,8 +6,8 @@
 _target=powerpc64-unknown-linux-gnu
 pkgname=$_target-binutils
 pkgver=2.38
-pkgrel=1
-pkgdesc='Assemble and manipulate binary and object files for 32-bit and 64-bit RISC-V'
+pkgrel=2
+pkgdesc="Assemble and manipulate binary and object ($_target)"
 arch=(x86_64 powerpc64le powerpc)
 url='https://gnu.org/software/binutils/'
 license=(GPL)
@@ -20,7 +20,7 @@ source=("https://ftp.gnu.org/gnu/binutils/binutils-$pkgver.tar.xz"
 sha512sums=('8bf0b0d193c9c010e0518ee2b2e5a830898af206510992483b427477ed178396cd210235e85fd7bd99a96fc6d5eedbeccbd48317a10f752b7336ada8b2bb826d'
             '5d827b349b4456f8314776f1545396945c751b822a77604157b3fe436e5ff82bb313af3a215c99fd9d1f1f8ebb9f92033cc1a4968e35734619ad28b9bb3839a7'
             '36da578519db4665f959a64813173ecbf3f999bc6b3acfb216e24d73a617ded22202e08915d2fa4c86b46c627127bc6e22e6dba07ce89588c0da7771c6f34a58'
-            '243d177b01174cdafd87ba2df0b7dd982fbaf5502a35a5ebd96ede6a606db79c2f331da336e009c37a72dd4bbab4624386caa8e32632a1ce8d36a549fbf48b82')
+            '302e1fe276fdc54ffc3285b48839777c182014952bc0383c32d1316a818a3a58599ca4a5ac8f7cf55081c1bf8749c8452f8e8572fb29ae4995dafc53abdc5211')
 
 prepare() {
   cd binutils-${pkgver}
