--- a/cross-compilers/powerpc64-unknown-linux-gnu-gcc-stage2/PKGBUILD
+++ b/cross-compilers/powerpc64-unknown-linux-gnu-gcc-stage2/PKGBUILD
@@ -15,7 +15,7 @@ pkgdesc="The GNU Compiler Collection. Stage 2 for toolchain building (${_target}
 arch=(x86_64 powerpc64le powerpc)
 license=(GPL LGPL FDL custom)
 url='http://gcc.gnu.org'
-depends=("${_target}-binutils>=2.38-1" "${_target}-glibc-headers>=2.35-1" libmpc zlib libisl)
+depends=("${_target}-binutils>=2.38-1" "${_target}-glibc-headers>=2.35-2" libmpc zlib)
 options=(!emptydirs !distcc !strip)
 conflicts=("${_target}-gcc-stage1")
 replaces=("${_target}-gcc-stage1")
