* update powerpc64-unknown-linux-gnu-gcc to 12.1.0-1

--- a/cross-compilers/powerpc64-unknown-linux-gnu-gcc/PKGBUILD
+++ b/cross-compilers/powerpc64-unknown-linux-gnu-gcc/PKGBUILD
@@ -15,7 +15,7 @@ pkgdesc="The GNU Compiler Collection (${_target})"
 arch=(x86_64 powerpc64le powerpc)
 license=(GPL LGPL FDL custom)
 url='http://gcc.gnu.org'
-depends=("${_target}-binutils>=2.38-1" "${_target}-glibc>=2.35-2" libmpc elfutils zlib libisl)
+depends=("${_target}-binutils>=2.38-1" "${_target}-glibc>=2.35-2" libmpc elfutils zlib)
 checkdepends=(dejagnu inetutils)
 options=(!emptydirs !distcc !strip)
 conflicts=("${_target}-gcc-stage1" "${_target}-gcc-stage2")
@@ -86,7 +86,7 @@ build() {
       --host=${CHOST} \
       --build=${CHOST}
 
-  make STAGE1_CFLAGS="-O2"
+  make STAGE1_CFLAGS="-O2 -mcpu=power8" STAGE2_CFLAGS="-O2 -mcpu=power8"
 }
 
 package() {
