--- a/php7/PKGBUILD
+++ b/php7/PKGBUILD
@@ -23,7 +23,7 @@ pkgname=('php7'
          'php7-tidy'
          'php7-xsl')
 pkgver=7.4.29
-pkgrel=3
+pkgrel=4
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('PHP')
 url='https://www.php.net/'
@@ -194,7 +194,7 @@ check() {
 package_php7() {
 	pkgdesc='A general-purpose scripting language that is especially suited to web development'
 	depends=('libxml2' 'curl' 'libzip' 'pcre2' 'argon2' 'oniguruma')
-	provides=(php=$pkgver)
+	provides=(php-interpreter=$_interpreter)
 	backup=('etc/php7/php.ini')
 
 	cd "${srcdir}/build"
@@ -213,7 +213,6 @@ package_php7() {
 package_php7-cgi() {
 	pkgdesc='CGI and FCGI SAPI for PHP'
 	depends=('php7')
-	provides=(php-cgi=$pkgver php-cgi-interpreter=$_interpreter)
 
 	cd "${srcdir}/build"
 	make -j1 INSTALL_ROOT="${pkgdir}" install-cgi
@@ -222,7 +221,6 @@ package_php7-cgi() {
 package_php7-apache() {
 	pkgdesc='Apache SAPI for PHP'
 	depends=('php7' 'apache' 'libnsl')
-	provides=(php-apache=$pkgver php-apache-interpreter=$_interpreter)
 	backup=('etc/httpd/conf/extra/php7_module.conf')
 
 	install -D -m755 "${srcdir}/build-apache/libs/libphp7.so" "${pkgdir}/usr/lib/httpd/modules/libphp7.so"
@@ -232,7 +230,6 @@ package_php7-apache() {
 package_php7-fpm() {
 	pkgdesc='FastCGI Process Manager for PHP'
 	depends=('php7' 'systemd')
-	provides=(php-fpm=$pkgver php-fpm-interpreter=$_interpreter)
 	backup=('etc/php7/php-fpm.conf' 'etc/php7/php-fpm.d/www.conf')
 	options=('!emptydirs')
 
@@ -245,7 +242,6 @@ package_php7-fpm() {
 package_php7-embed() {
 	pkgdesc='Embedded PHP SAPI library'
 	depends=('php7' 'systemd-libs' 'libnsl' 'libxcrypt')
-	provides=(php-embed=$pkgver php-embed-interpreter=$_interpreter)
 	options=('!emptydirs')
 
 	cd "${srcdir}/build"
@@ -255,7 +251,6 @@ package_php7-embed() {
 package_php7-phpdbg() {
 	pkgdesc='Interactive PHP debugger'
 	depends=('php7')
-	provides=(php-phpdbg=$pkgver php-phpdbg-interpreter=$_interpreter)
 	options=('!emptydirs')
 
 	cd "${srcdir}/build-phpdbg"
@@ -265,7 +260,6 @@ package_php7-phpdbg() {
 package_php7-dblib() {
 	pkgdesc='dblib module for PHP'
 	depends=('php7' 'freetds')
-	provides=(php-dblib=$pkgver php-dblib-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/pdo_dblib.so" "${pkgdir}/usr/lib/php7/modules/pdo_dblib.so"
 }
@@ -273,7 +267,6 @@ package_php7-dblib() {
 package_php7-enchant() {
 	pkgdesc='enchant module for PHP'
 	depends=('php7' 'enchant')
-	provides=(php-enchant=$pkgver php-enchant-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/enchant.so" "${pkgdir}/usr/lib/php7/modules/enchant.so"
 }
@@ -281,7 +274,6 @@ package_php7-enchant() {
 package_php7-gd() {
 	pkgdesc='gd module for PHP'
 	depends=('php7' 'gd')
-	provides=(php-gd=$pkgver php-gd-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/gd.so" "${pkgdir}/usr/lib/php7/modules/gd.so"
 }
@@ -289,7 +281,6 @@ package_php7-gd() {
 package_php7-imap() {
 	pkgdesc='imap module for PHP'
 	depends=('php7' 'c-client' 'libxcrypt')
-	provides=(php-imap=$pkgver php-imap-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/imap.so" "${pkgdir}/usr/lib/php7/modules/imap.so"
 }
@@ -297,7 +288,6 @@ package_php7-imap() {
 package_php7-intl() {
 	pkgdesc='intl module for PHP'
 	depends=('php7' 'icu')
-	provides=(php-intl=$pkgver php-intl-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/intl.so" "${pkgdir}/usr/lib/php7/modules/intl.so"
 }
@@ -305,7 +295,6 @@ package_php7-intl() {
 package_php7-sodium() {
 	pkgdesc='sodium module for PHP'
 	depends=('php7' 'libsodium')
-	provides=(php-sodium=$pkgver php-sodium-interpreter=$_interpreter)
 
 
 	install -D -m755 "${srcdir}/build/modules/sodium.so" "${pkgdir}/usr/lib/php7/modules/sodium.so"
@@ -314,7 +303,6 @@ package_php7-sodium() {
 package_php7-odbc() {
 	pkgdesc='ODBC modules for PHP'
 	depends=('php7' 'unixodbc')
-	provides=(php-odbc=$pkgver php-odbc-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/odbc.so" "${pkgdir}/usr/lib/php7/modules/odbc.so"
 	install -D -m755 "${srcdir}/build/modules/pdo_odbc.so" "${pkgdir}/usr/lib/php7/modules/pdo_odbc.so"
@@ -323,7 +311,6 @@ package_php7-odbc() {
 package_php7-pgsql() {
 	pkgdesc='PostgreSQL modules for PHP'
 	depends=('php7' 'postgresql-libs')
-	provides=(php-pgsql=$pkgver php-pgsql-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/pgsql.so" "${pkgdir}/usr/lib/php7/modules/pgsql.so"
 	install -D -m755 "${srcdir}/build/modules/pdo_pgsql.so" "${pkgdir}/usr/lib/php7/modules/pdo_pgsql.so"
@@ -332,7 +319,6 @@ package_php7-pgsql() {
 package_php7-pspell() {
 	pkgdesc='pspell module for PHP'
 	depends=('php7' 'aspell')
-	provides=(php-pspell=$pkgver php-pspell-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/pspell.so" "${pkgdir}/usr/lib/php7/modules/pspell.so"
 }
@@ -340,7 +326,6 @@ package_php7-pspell() {
 package_php7-snmp() {
 	pkgdesc='snmp module for PHP'
 	depends=('php7' 'net-snmp')
-	provides=(php-snmp=$pkgver php-snmp-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/snmp.so" "${pkgdir}/usr/lib/php7/modules/snmp.so"
 }
@@ -348,7 +333,6 @@ package_php7-snmp() {
 package_php7-sqlite() {
 	pkgdesc='sqlite module for PHP'
 	depends=('php7' 'sqlite')
-	provides=(php-sqlite=$pkgver php-sqlite-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/sqlite3.so" "${pkgdir}/usr/lib/php7/modules/sqlite3.so"
 	install -D -m755 "${srcdir}/build/modules/pdo_sqlite.so" "${pkgdir}/usr/lib/php7/modules/pdo_sqlite.so"
@@ -357,7 +341,6 @@ package_php7-sqlite() {
 package_php7-tidy() {
 	pkgdesc='tidy module for PHP'
 	depends=('php7' 'tidy')
-	provides=(php-tidy=$pkgver php-tidy-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/tidy.so" "${pkgdir}/usr/lib/php7/modules/tidy.so"
 }
@@ -365,7 +348,6 @@ package_php7-tidy() {
 package_php7-xsl() {
 	pkgdesc='xsl module for PHP'
 	depends=('php7' 'libxslt')
-	provides=(php-xsl=$pkgver php-xsl-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/xsl.so" "${pkgdir}/usr/lib/php7/modules/xsl.so"
 }
