--- a/cross-compilers/powerpc-linux-gnu-gcc-stage1/PKGBUILD
+++ b/cross-compilers/powerpc-linux-gnu-gcc-stage1/PKGBUILD
@@ -1,3 +1,4 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Contributor: Alexander 'hatred' Drozdov <adrozdoff@gmail.com>
 # Contributor: toha257 <toha257@gmail.com>
 # Contributor: Allan McRae <allan@archlinux.org>
@@ -5,39 +6,42 @@
 # Contributor: Tavian Barnes <tavianator@tavianator.com>
 # Maintainer: Stefan Schmidt <thrimbor.github@gmail.com>
 
-_target="powerpc-unknown-linux-gnu"
+_target=powerpc-unknown-linux-gnu
 pkgname=${_target}-gcc-stage1
-pkgver=10.2.0
-_islver=0.21
-pkgrel=1
+pkgver=12.1.0
+_majorver=${pkgver:0:1}
+pkgrel=2
 pkgdesc="The GNU Compiler Collection. Stage 1 for toolchain building (${_target})"
-arch=(powerpc64 powerpc64le)
+arch=(x86_64 powerpc64le)
 license=(GPL LGPL FDL custom)
 url='http://gcc.gnu.org'
-depends=(${_target}-binutils libmpc zlib)
+depends=(${_target}-binutils libmpc zlib libisl)
 options=(!emptydirs !distcc !strip)
 source=(https://ftp.gnu.org/gnu/gcc/gcc-${pkgver}/gcc-${pkgver}.tar.xz{,.sig}
-        http://isl.gforge.inria.fr/isl-${_islver}.tar.bz2)
+	gcc11-Wno-format-security.patch)
 validpgpkeys=(F3691687D867B81B51CE07D9BBE43771487328A9  # bpiotrowski@archlinux.org
               86CFFCA918CF3AF47147588051E8B148A9999C34  # evangelos@foutrelis.com
               13975A70E63C361C73AE69EF6EEB81F8981C74C7  # richard.guenther@gmail.com
-              33C235A34C46AA3FFB293709A328C3A2C3C45C06) # Jakub Jelinek <jakub@redhat.com>
-sha256sums=('b8dd4368bb9c7f0b98188317ee0254dd8cc99d1e3a18d0ff146c855fe16c1d8c'
+              D3A93CAD751C2AF4F8C7AD516C35B99309B5FA62) # Jakub Jelinek <jakub@redhat.com>
+sha256sums=('62fd634889f31c02b64af2c468f064b47ad1ca78411c45abe6ac4b5f8dd19c7b'
             'SKIP'
-            'd18ca11f8ad1a39ab6d03d3dcb3365ab416720fcb65b42d69f34f51bf0a0e859')
+            '504e4b5a08eb25b6c35f19fdbe0c743ae4e9015d0af4759e74150006c283585e')
 
 prepare() {
   [[ ! -d gcc ]] && ln -s gcc-${pkgver/+/-} gcc
   cd gcc
 
-  # link isl for in-tree build
-  ln -sf ../isl-${_islver} isl
-
   # Do not run fixincludes
   sed -i 's@\./fixinc\.sh@-c true@' gcc/Makefile.in
 
+  # Arch Linux installs x86_64 libraries /lib
+  sed -i '/m64=/s/lib64/lib/' gcc/config/i386/t-linux64
+
   # hack! - some configure tests for header files using "$CPP $CPPFLAGS"
   sed -i "/ac_cpp=/s/\$CPPFLAGS/\$CPPFLAGS -O2/" {libiberty,gcc}/configure
+
+  # configure.ac: When adding -Wno-format, also add -Wno-format-security
+  patch -Np0 < "$srcdir/gcc11-Wno-format-security.patch"
 
   mkdir -p "$srcdir/gcc-build"
 }
@@ -47,8 +51,10 @@ build() {
 
   # using -pipe causes spurious test-suite failures
   # http://gcc.gnu.org/bugzilla/show_bug.cgi?id=48565
-  CFLAGS=${CFLAGS/-pipe/}
+  CFLAGS=${CFLAGS/-pipe}
+  CFLAGS=${CFLAGS/-Wformat -Werror=format-security/}
   CXXFLAGS=${CXXFLAGS/-pipe/}
+  CXXFLAGS=${CXXFLAGS/ -Wformat -Werror=format-security/}
 
   "$srcdir/gcc/configure" --prefix=/usr \
       --program-prefix=${_target}- \
@@ -65,7 +71,6 @@ build() {
       --disable-shared \
       --disable-threads \
       --with-system-zlib \
-      --with-isl \
       --enable-__cxa_atexit \
       --disable-libunwind-exceptions \
       --enable-clocale=gnu \
@@ -87,7 +92,7 @@ build() {
       --host=${CHOST} \
       --build=${CHOST}
 
-  make all-gcc all-target-libgcc
+  make STAGE1_CFLAGS="-O2" all-gcc all-target-libgcc
 }
 
 package() {
