--- a/xdg-utils/PKGBUILD
+++ b/xdg-utils/PKGBUILD
@@ -4,11 +4,11 @@
 
 pkgname=xdg-utils
 # https://gitlab.freedesktop.org/xdg/xdg-utils/commits/master
-_commit=9816ebb3e6fd9f23e993b8b7fcbd56f92d9c9197 # master # 2020-02-20
-pkgver=1.1.3+19+g9816ebb
+_commit=1a58bc28f6844898532daf9ee1bf6da7764955a9 # master # 2021-08-05
+pkgver=1.1.3+21+g1a58bc2
 pkgrel=1
 pkgdesc="Command line tools that assist applications with a variety of desktop integration tasks"
-arch=('any')
+arch=(any)
 url="https://www.freedesktop.org/wiki/Software/xdg-utils/"
 license=('MIT')
 depends=('sh' 'which' 'file' 'xorg-xset' 'xorg-xprop') # xset + xprop needed inside xdg-screensaver
