--- a/xcompmgr/PKGBUILD
+++ b/xcompmgr/PKGBUILD
@@ -1,11 +1,12 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 # Contributor: Leslie P. Polzer <leslie.polzer@gmx.net>
 
 pkgname=xcompmgr
 pkgver=1.1.8
-pkgrel=2
+pkgrel=3
 pkgdesc="Composite Window-effects manager for X.org"
-arch=('x86_64' 'powerpc64le' 'powerpc')
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libxcomposite' 'libxdamage' 'libxrender' 'libxext')
