--- a/grpc/PKGBUILD
+++ b/grpc/PKGBUILD
@@ -4,40 +4,38 @@
 # Contributor: Victor Aurélio Santos <victoraur.santos@gmail.com>
 
 pkgbase='grpc'
-pkgname=('grpc' 'python-grpcio' 'php-grpc' 'php7-grpc' 'grpc-cli')
-pkgver=1.45.2
+pkgname=('grpc' 'php-grpc' 'php7-grpc' 'grpc-cli')
+[[ ! "${CARCH}" = 'powerpc' ]] && pkgname+=('python-grpcio')
+pkgver=1.46.3
 _gtestver=0e402173c97aea7a00749e825b194bfede4f2e45
-pkgrel=3
+pkgrel=1
 pkgdesc="High performance, open source, general RPC framework that puts mobile and HTTP/2 first."
 arch=(x86_64 powerpc64le powerpc)
 url='https://grpc.io'
 license=('BSD')
 makedepends=('re2' 're2c' 'protobuf' 'php' 'php7' 'c-ares' 'openssl' 'chrpath' 'cython'
-             'cmake' 'benchmark' 'python-setuptools' 'abseil-cpp' 'ninja')
+             'cmake' 'benchmark' 'python-setuptools' 'abseil-cpp' 'ninja' 'python-six')
 options=('debug')
-checkdepends=('python-six')
 source=("https://github.com/grpc/grpc/archive/v$pkgver/$pkgbase-$pkgver.tar.gz"
         "https://github.com/google/googletest/archive/$_gtestver/googletest-$_gtestver.tar.gz"
-        "python-grpcio-use-system-abseil.patch"
-        "python-grpcio-nullptr-fix.patch")
-sha256sums=('e18b16f7976aab9a36c14c38180f042bb0fd196b75c9fd6a20a2b5f934876ad6'
+        "python-grpcio-use-system-abseil.patch")
+sha256sums=('d6cbf22cb5007af71b61c6be316a79397469c58c82a942552a62e708bce60964'
             'c8de6c60e12ad014a28225c5247ee735861d85cf906df617f6a29954ca05f547'
-            '3cfb289266f9d2697b917e4400f18a6592f95a99e658e401c1332870b219358b'
-            '3d3364a9cd71aae95f683242c7022f6599880b8d6df2472efab755820b2c0f21')
+            '3cfb289266f9d2697b917e4400f18a6592f95a99e658e401c1332870b219358b')
+
+case "${CARCH}" in
+  powerpc) export EXTRA_CMAKE_FLAGS="-DCMAKE_CXX_STANDARD_LIBRARIES=-latomic"
+  ;;
+esac
 
 prepare() {
   cd "$srcdir/$pkgbase-$pkgver"
   patch -Np1 -i ../python-grpcio-use-system-abseil.patch
-  patch -Np1 -i ../python-grpcio-nullptr-fix.patch
 
   ln -sf "$srcdir/googletest-$_gtestver/"{googlemock,googletest} \
     third_party/googletest
 
   cp -a src/php{,7}
-
-  case "${CARCH}" in
-    powerpc) CXXFLAGS+=" -latomic" ;;
-  esac
 
   cmake -Bbuild \
     -DCMAKE_BUILD_TYPE=None \
@@ -67,7 +65,7 @@ prepare() {
     -DgRPC_BUILD_GRPC_PHP_PLUGIN=ON \
     -DgRPC_BUILD_GRPC_PYTHON_PLUGIN=ON \
     -DgRPC_BUILD_GRPC_RUBY_PLUGIN=ON \
-    -GNinja
+    -GNinja ${EXTRA_CMAKE_FLAGS}
 }
 
 build() {
@@ -100,6 +98,10 @@ build() {
   GRPC_PYTHON_BUILD_SYSTEM_ABSL=1 \
   GRPC_BUILD_WITH_BORING_SSL_ASM=0 \
   python setup.py build
+
+  # grpcio-tools
+  cd tools/distrib/python
+  python make_grpcio_tools.py
 }
 
 check() {
