--- a/graphite/PKGBUILD
+++ b/graphite/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=graphite
 pkgver=1.3.14
-pkgrel=1
+pkgrel=2
 epoch=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/silnrsi/graphite"
@@ -12,7 +12,7 @@ license=('LGPL' 'GPL' 'custom')
 depends=('gcc-libs')
 makedepends=('cmake' 'freetype2' 'python'
              # for documentation
-             'asciidoc')
+             'doxygen' 'dblatex' 'graphviz' 'asciidoc')
 checkdepends=('python-fonttools')
 options=('!emptydirs')
 # https://github.com/silnrsi/graphite/releases/download/1.3.14/graphite2-1.3.14.sha256sum
@@ -44,6 +44,10 @@ check() {
 package() {
   cd "${srcdir}"/build
   make DESTDIR="$pkgdir/" install
+  # install doc files
+  mkdir -p "${pkgdir}"/usr/share/doc/graphite2/api
+  cp -vrf doc/doxygen/{html,latex/refman.pdf} "${pkgdir}"/usr/share/doc/graphite2/api
+  cp -vrf doc/{GTF,manual}.html "${pkgdir}"/usr/share/doc/graphite2
 
   # licenses
   mkdir -p "${pkgdir}"/usr/share/licenses/${pkgname}
