--- a/libvirt/PKGBUILD
+++ b/libvirt/PKGBUILD
@@ -7,10 +7,10 @@
 
 pkgname=(libvirt libvirt-storage-gluster libvirt-storage-iscsi-direct libvirt-storage-rbd)
 epoch=1
-pkgver=8.3.0
+pkgver=8.4.0
 pkgrel=1
 pkgdesc="API for controlling virtualization engines (openvz,kvm,qemu,virtualbox,xen,etc)"
-arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(x86_64 powerpc64le)
 url="https://libvirt.org/"
 license=('LGPL' 'GPL3') #libvirt_parthelper links to libparted which is GPL3 only
 depends=('libpciaccess' 'yajl' 'fuse3' 'gnutls' 'parted' 'libssh' 'libxml2' 'numactl' 'polkit')
@@ -84,7 +84,7 @@ backup=(
 )
 options=(debug)
 source=("https://libvirt.org/sources/$pkgname-$pkgver.tar.xz"{,.asc})
-sha256sums=('be229b9ad1d48be7007e7bf341fc990c65e24aea624c16db6b36d02c820df5eb'
+sha256sums=('601a6e9bb03a43d05659f63e4a403df253ab0975b4a973f10a5607f3bbc018dd'
             'SKIP')
 validpgpkeys=('453B65310595562855471199CA68BE8010084C9C') # Jiří Denemark <jdenemar@redhat.com>
 
