--- a/libmspack/PKGBUILD
+++ b/libmspack/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.10.1alpha
 pkgrel=3
 pkgdesc='A library for Microsoft compression formats'
 url='https://www.cabextract.org.uk/libmspack/'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL')
 depends=('glibc')
 makedepends=('git')
