--- a/virt-manager/PKGBUILD
+++ b/virt-manager/PKGBUILD
@@ -7,16 +7,16 @@
 
 pkgbase=virt-manager
 pkgname=(virt-install virt-manager)
-pkgver=3.2.0
+pkgver=4.0.0
 pkgrel=1
-arch=('any')
+arch=(any)
 url='https://virt-manager.org/'
 license=('GPL')
-makedepends=('python-docutils')
+makedepends=('python-docutils' 'python-setuptools')
 checkdepends=('python-pytest' 'libosinfo' 'libvirt-python' 'python-gobject' 'python-requests' 'cpio' 'cdrtools')
 optdepends=('x11-ssh-askpass: provide password for remote machines connected via ssh tunnel')
 source=("https://virt-manager.org/download/sources/virt-manager/virt-manager-${pkgver}.tar.gz")
-b2sums=('83bd8589fb7d9c855300e06689fdeeeee575e354f9349b5bc63ff1da1a8b578a842f6f60d95a8b8fa53ed007c090d37f706f50fb8dcbcee83c08e27853a150cc')
+b2sums=('cf6ae282c6a351aab832a06387bf9daf9093c8cce3688cf0597f33d037db875638429a5320ffe28d8d860c83484ba5d6a02a8dc758c98914fa2af483552dede8')
 
 build() {
   cd ${pkgbase}-${pkgver}
@@ -26,7 +26,7 @@ build() {
 
 package_virt-install() {
   pkgdesc='Command line tool for creating new KVM , Xen, or Linux container guests using the libvirt hypervisor'
-  depends=('libosinfo' 'libvirt-python' 'python-gobject' 'python-requests')
+  depends=('libosinfo' 'libvirt-python' 'python-gobject' 'python-requests' 'cpio' 'libisoburn')
 
   cd ${pkgbase}-${pkgver}
   python setup.py --no-update-icon-cache --no-compile-schemas install --root "${pkgdir}"
