* update strip-nondeterminism to 1.12.1-2

--- a/strip-nondeterminism/PKGBUILD
+++ b/strip-nondeterminism/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=strip-nondeterminism
 pkgver=1.12.1
-pkgrel=1
+pkgrel=2
 pkgdesc='Tool for stripping bits of non-deterministic information from files'
 url='https://salsa.debian.org/reproducible-builds/strip-nondeterminism'
-arch=('any')
+arch=(any)
 license=('GPL3')
 depends=("perl" 'perl-archive-zip' 'perl-archive-cpio' 'perl-sub-override')
 makedepends=('git')
