--- a/mediastreamer/PKGBUILD
+++ b/mediastreamer/PKGBUILD
@@ -6,17 +6,17 @@
 # Contributor: Mark Lee <mark@markelee.com>
 
 pkgname=mediastreamer
-pkgver=5.1.20
+pkgver=5.1.31
 pkgrel=1
 pkgdesc='A library written in C that allows you to create and run audio and video streams'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gitlab.linphone.org/'
 license=(GPL)
 depends=(ortp ffmpeg bzrtp glew libsrtp)
-makedepends=(cmake python bcunit doxygen)
+makedepends=(cmake python bcunit doxygen libyuv)
 source=(https://gitlab.linphone.org/BC/public/${pkgname}2/-/archive/$pkgver/${pkgname}2-$pkgver.tar.bz2
         ffmpeg5.patch)
-sha256sums=('d5d9c2436ab21eae99b0620435ede7c142ab9f6c3870eda4c88bd8402cd8a75e'
+sha256sums=('4c4dbe96e38c79df11ef886f7606556d2366012417d7654cfdc2556484b2e1b9'
             'e97e029cbbafe5245eaa6f92664224e4381eea5f45e403d5bfa6b0e5c2be0341')
 validpgpkeys=('9774BC1725758EB16D639F8B3ECD52DEE2F56985')
 
