--- a/net-snmp/PKGBUILD
+++ b/net-snmp/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=net-snmp
 pkgver=5.9.1
-pkgrel=3
+pkgrel=4
 pkgdesc="A suite of applications used to implement SNMP v1, SNMP v2c and SNMP v3 using both IPv4 and IPv6"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://www.net-snmp.org/"
@@ -43,8 +43,7 @@ build() {
     --with-sys-location="Unknown" \
     --with-logfile="/var/log/snmpd.log" \
     --with-mib-modules="host misc/ipfwacc ucd-snmp/diskio tunnel ucd-snmp/dlmod ucd-snmp/lmsensorsMib" \
-    --with-persistent-directory="/var/net-snmp" \
-    --build=${CHOST}
+    --with-persistent-directory="/var/net-snmp"
   make NETSNMP_DONT_CHECK_VERSION=1
 }
 
