* update nodejs-yaml to 2.0.1-1

--- a/nodejs/nodejs-yaml/PKGBUILD
+++ b/nodejs/nodejs-yaml/PKGBUILD
@@ -3,17 +3,17 @@
 
 _npmname=yaml
 pkgname=nodejs-$_npmname
-pkgver=1.10.2
+pkgver=2.0.1
 pkgrel=1
 pkgdesc="JavaScript parser and stringifier for YAML"
-arch=('any')
+arch=(any)
 url="https://www.emojione.com"
 license=('ISC')
 depends=('nodejs')
 makedepends=('npm')
 source=("https://registry.npmjs.org/$_npmname/-/$_npmname-$pkgver.tgz")
 noextract=($_npmname-$pkgver.tgz)
-sha512sums=('af7bd7c84ad109827bc20dbccaf058e554a8005f19be5716f7f07053312d52c8ef5ff0cab36e1d224bb08edba9af02491ec6f251b2c0a5ea584d1d41378b87ae')
+sha512sums=('d4da40610df08f322532cd2681d0666332e4160581216af36150d87eb8b186814d360278e38fe34f69144f6b227116c9112de8418459ba08c1e91a3c4a329e16')
 
 package() {
   npm install -g --prefix "$pkgdir"/usr "$srcdir"/$_npmname-$pkgver.tgz
