* update mold to 1.3.0-1

--- a/mold/PKGBUILD
+++ b/mold/PKGBUILD
@@ -3,18 +3,18 @@
 # Contributor: Adrian Perez de Castro <aperez@igalia.com>
 
 pkgname=mold
-pkgver=1.2.1
+pkgver=1.3.0
 pkgrel=1
 pkgdesc='A Modern Linker'
-arch=(x86_64 riscv64)
+arch=(x86_64 powerpc64le riscv64)
 url="https://github.com/rui314/mold"
 license=('AGPL3')
 depends=('gcc-libs' 'mimalloc' 'openssl' 'zlib' 'tbb') # xxhash is bundled
 makedepends=('git')
 checkdepends=('clang' 'libdwarf')
 options=('debug')
-_commit='c8d8f86a52084c96e2663d9f692c51e98c04cc2f'
-source=("$pkgname::git+$url.git#commit=$_commit")
+_tag=v${pkgver}
+source=("$pkgname::git+$url.git#tag=$_tag")
 b2sums=('SKIP')
 
 pkgver() {
