* update thunderbird to 91.10.0-1

--- a/thunderbird/PKGBUILD
+++ b/thunderbird/PKGBUILD
@@ -8,7 +8,7 @@
 
 pkgbase=thunderbird
 pkgname=(thunderbird)
-pkgver=91.8.1
+pkgver=91.10.0
 pkgrel=1
 pkgdesc='Standalone mail and news reader from mozilla.org'
 url='https://www.mozilla.org/thunderbird/'
@@ -35,16 +35,18 @@ source=(https://ftp.mozilla.org/pub/mozilla.org/thunderbird/releases/$pkgver/sou
         vendor-prefs.js
         distribution.ini
         mozconfig.cfg{,.powerpc64le}
-        metainfo.patch
-        avoid-redefinition.patch
-        big-endian-image-decoders.patch
-        firefox-pgo.patch
-        firefox-powerpc-clang.patch
-        fix-image-format-warning.patch
-        flac-no-ffvpx.patch
-        skia-sucks1.patch
-        skia-sucks2.patch
-	skia-sucks3.patch)
+	firefox-powerpc-clang.patch
+	flac-no-ffvpx.patch
+	firefox-pgo.patch
+	metainfo.patch
+	avoid-redefinition.patch
+	skia-sucks1.patch
+	skia-sucks3.patch
+	skia-sucks2.patch
+	fix-image-format-warning.patch
+	sandbox-largefile.patch
+	sandbox-fork.patch
+        fix-cargo-glsl-gcc12.patch)
 validpgpkeys=(
   14F26682D0916CDD81E37B6D61B7B526D98F0353 # Mozilla Software Releases <release@mozilla.com>
   4360FE2109C49763186F8E21EBE41E90F6F12F6D # Mozilla Software Releases <release@mozilla.com>
@@ -97,9 +99,9 @@ prepare() {
       cat >>.mozconfig <<END
 export CC=gcc
 export CXX=g++
-export LDFLAGS="${LDFLAGS} -Wl,-rpath=/usr/lib/thunderbird"
+export LDFLAGS="${LDFLAGS} -Wl,-rpath=/usr/lib/thunderbird -latomic"
 mk_add_options MOZ_MAKE_FLAGS="${MAKEFLAGS}"
-ac_add_options --enable-optimize="${CXXFLAGS}"
+ac_add_options --enable-optimize
 END
                     ;;
   esac
@@ -154,20 +156,22 @@ END
     "$pkgdir/usr/lib/$pkgname/thunderbird-bin"
 }
 
-sha256sums=('82737d29b89f39620fbdfc47e84d053edad903c72057526ff2a8215fd73e283d'
+sha256sums=('a0dbf9a8083a4dff8a0506b5f4c6910f681476e2c5fce081beda4493168e66f9'
             'SKIP'
             'e44c55501f650a4e80b9c353b81f33e07ca65808db831eff6ca616aded233827'
             'fa11b4736bbf53ec015f71cd42b1040b22d1a855c562b76927b3f0eccb925c85'
             'bc3aae2cc00dc9806f54606f98d967366a2ba7223f6a3ad1c658a653ebff5569'
             '1c5d830f2dd4e8c988fcc038121e7563a44af866d6283ee24274d16f8414d1b6'
             'ace80afd8dadb000e324e400d5a8f9f2e4ad214b32844bf23236f604c5f88db1'
-            'd1a81bdadc6cc1b96aeb7898e986efbb132a1ce142611b7af2cf744f00cad601'
-            '3ebba6c6c59dbf754b522d2535c27eae3e724aab575b8e7be9658e0d33183bcf'
-            '0df637d44218524e213814d15d623f27724d8e405390173f6cc385e145110bfe'
-            'cd9baa74c6dd7e2a689b072ac039c3fe4618012dd8f11d4ca422369a842d6441'
             'ad83c0c6195ab742848941be1d9c8f32c1d4a8bc019d8887b42256bafaefb541'
-            '958cf5016e9845b6ee6e2ed05ad96cc2fc6f74bebbb338a7b7ce29bffd2be716'
             '944fc690a0b344ea56ff2b0880ba492ba80338a68f31d0fb205b891a5de42cee'
+            'cd9baa74c6dd7e2a689b072ac039c3fe4618012dd8f11d4ca422369a842d6441'
+            'd1a81bdadc6cc1b96aeb7898e986efbb132a1ce142611b7af2cf744f00cad601'
+            '49c70ba89a886d7426cc44d47795b9a033130087d2d3c5f412112b9a5eb5310d'
             '9cdffb3f91e0956f4147c8556c80b97bcae448b84ce0d0a0e009a231a9915396'
+            '851503764a3068d36659b9231c9aaa40fe8a15680f7d0a378e9009ae1a776dae'
             'd98af26b723a8b590822a3d1ab925841b99882c158d3dec7514288c968f2428e'
-	    '851503764a3068d36659b9231c9aaa40fe8a15680f7d0a378e9009ae1a776dae')
+            '958cf5016e9845b6ee6e2ed05ad96cc2fc6f74bebbb338a7b7ce29bffd2be716'
+            '3bcbd909aa78bcc4b5b5822d0453c332b8d38bc05e439a670f7fe5a98f75c3f4'
+            '0b6a2fb1b8f87722d29b62908b3e2d274d3deaa602bec795e4fb78b4d5b4ecd2'
+            '420e05220ec0cdca613bc7833fb997c433305705d757cd764a01fdd308995d4d')
