* update qt5-webengine to 5.15.9-3

--- a/qt5/qt5-webengine/PKGBUILD
+++ b/qt5/qt5-webengine/PKGBUILD
@@ -3,9 +3,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt5-webengine
-_basever=5.15.3
+_basever=5.15.4
 pkgver=5.15.9
-pkgrel=2
+pkgrel=3
 arch=(x86_64 powerpc64le)
 url='https://www.qt.io'
 license=('LGPL3' 'LGPL2.1' 'BSD')
@@ -23,6 +23,7 @@ source=(git+https://code.qt.io/qt/qtwebengine.git#tag=v${pkgver}-lts
         qt5-webengine-chromium-python3.patch
         qt5-webengine-ffmpeg5.patch
         qt5-webengine-pipewire-0.3.patch
+        qt5-webengine-gcc12.patch
         0001-include-sys-reg.h-to-get-__WORDSIZE-on-musl-libc.patch
         0002-sandbox-membarrier.patch
         0003-msgvec-push_back.patch
@@ -38,6 +39,7 @@ sha256sums=('SKIP'
             'fda4ff16790799fb285847918a677f4f3f7c0f513d4751f846ffc5aa5d873932'
             'c50d3019626183e753c53a997dc8a55938847543aa3178d4c51f377be741c693'
             '5e3a3c4711d964d5152a04059a2b5c1d14bb13dd29bce370120f60e85b476b6f'
+            'cf9be3ffcc3b3cd9450b1ff13535ff7d76284f73173412d097a6ab487463a379'
             'c218876cf5f257effdb6cd8a937b88ddd461656a228069f96708b45f3cd741d8'
             'da58d2214d1c50a7b784e18a97473c9086657d5f43e8640675e98451859307d1'
             'd13e6ad37d36834867d57e23c339b73053983dafa76c7377999ff2a5b17332c3'
@@ -62,6 +64,8 @@ prepare() {
 
   patch -p1 -d src/3rdparty -i "$srcdir"/qt5-webengine-ffmpeg5.patch # Fix build with ffmpeg 5
   patch -p1 -d src/3rdparty -i "$srcdir"/qt5-webengine-pipewire-0.3.patch # Port to pipewire 0.3
+
+  patch -p1 -d src/3rdparty -i "$srcdir"/qt5-webengine-gcc12.patch # Fix build with GCC 12
 
   patch -Np1 -i ${srcdir}/0001-include-sys-reg.h-to-get-__WORDSIZE-on-musl-libc.patch
   patch -Np1 -i ${srcdir}/0002-sandbox-membarrier.patch
