* update libreoffice-fresh to 7.3.3-2

--- a/libreoffice-fresh/PKGBUILD
+++ b/libreoffice-fresh/PKGBUILD
@@ -11,10 +11,10 @@ _google_default_client_secret=0ZChLK6AxeA3Isu96MkwqDR4
 
 pkgbase=libreoffice-fresh
 pkgname=('libreoffice-fresh-sdk' 'libreoffice-fresh')
-_LOver=7.3.2.2
-pkgver=7.3.2
+_LOver=7.3.3.2
+pkgver=7.3.3
 pkgrel=2
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le)
 license=('LGPL3')
 url="https://www.libreoffice.org/"
 makedepends=('curl>=7.20.0' 'hunspell>=1.2.8' 'python>=3.7' 'libwpd>=0.9.2' 'libwps'
@@ -61,6 +61,7 @@ source=(${_mirror}/libreoffice{,-help,-translations}-${_LOver}.tar.xz{,.asc}
 	${_additional_source_url2}/f543e6e2d7275557a839a164941c0a86e5f2c3f2a0042bfc434c88c6dde9e140-opens___.ttf
 	${_additional_source_url2}/185d60944ea767075d27247c3162b3bc-unowinreg.dll
 	poppler-22.03.0.patch
+	poppler-22.04.0.patch
 	make-pyuno-work-with-system-wide-module-install.diff
 	soffice-template.desktop.in 
 	libreoffice-fresh.sh libreoffice-fresh.csh)
@@ -84,11 +85,11 @@ noextract=(35c94d2df8893241173de1d16b6034c0-swingExSrc.zip
            185d60944ea767075d27247c3162b3bc-unowinreg.dll
 )
 validpgpkeys=('C2839ECAD9408FBE9531C3E9F434A1EFAFEEAEA3') # LibreOffice Build Team (CODE SIGNING KEY) <build@documentfoundation.org>
-sha256sums=('be96b0c9c7af7e24564729281ca6cef4eadfb06c9b30131a6fc94fa3e43b46a8'
+sha256sums=('ee12bdbe1621c20e2744bc5b6c5967810f25a5760b98ac5812d550ab00968685'
             'SKIP'
-            'addb19304e3330f49614eb979541cf1bdf93b481dcce22fdee20fbb193066aec'
+            '688634eccb802c156496124b394c0ec5e21059a9b6cd0095930f9e76f9eefe9b'
             'SKIP'
-            'c2588507b425bc7047b6325fcde8a2fcc9a927cee5b76065f42ddb68bad0fd71'
+            'b91b0a482fa42d59e1605f39a3917166e7ff76bfa8e9b62d6eef0a9b04b3351c'
             'SKIP'
             '64585ac36a81291a58269ec5347e7e3e2e8596dbacb9221015c208191333c6e1'
             '1fb458d6aab06932693cc8a9b6e4e70944ee1ff052fa63606e3131df34e21753'
@@ -109,6 +110,7 @@ sha256sums=('be96b0c9c7af7e24564729281ca6cef4eadfb06c9b30131a6fc94fa3e43b46a8'
             'f543e6e2d7275557a839a164941c0a86e5f2c3f2a0042bfc434c88c6dde9e140'
             'eafde646a7dbe46d20c291685b0beac2382174d78d66ee990e229a1bf6e6cec6'
             'e61e2a266c7a4374377475254a2f095c1ce2376980b301955a4e5a0d32d3c25b'
+            'caaef7919c6296ab93c7d02607503f91ec965387d038779c0aba9fce78b8e456'
             'c463654a73ecfbc242ff109726fb4faecdbfb3d91affafe919b24bea65afb563'
             'd0be8099cbee3c9dfda694a828149b881c345b204ab68826f317580aafb50879'
             'cd1b25ff390e436c6bffa65c6e12382236e3ccbf8d3aae51b1b59bcaed79fd8a'
@@ -131,6 +133,7 @@ prepare() {
 	cp -f "${srcdir}"/185d60944ea767075d27247c3162b3bc-unowinreg.dll "${srcdir}"/ext_sources
 
 	patch -Np1 -i "${srcdir}"/poppler-22.03.0.patch
+	patch -Np0 -i "${srcdir}"/poppler-22.04.0.patch
 
 	# fix not upstreamable pyuno paths - FS#54250
 	patch -Np1 -i "${srcdir}"/make-pyuno-work-with-system-wide-module-install.diff
