* fix gpgme for large file support on powerpc

--- a/gpgme/PKGBUILD
+++ b/gpgme/PKGBUILD
@@ -6,7 +6,7 @@
 pkgbase=gpgme
 pkgname=(gpgme qgpgme python-gpgme)
 pkgver=1.17.1
-pkgrel=1.1
+pkgrel=1.2
 _python_ver=3.10
 pkgdesc='A C wrapper library for GnuPG'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -31,9 +31,11 @@ build() {
 
   _pyarch=${CARCH}
   case "${CARCH}" in
-    powerpc)     _pyarch=ppc; export CFLAGS+=" -D_FILE_OFFSET_BITS=64" ;;
+    powerpc)     _pyarch=ppc; export CFLAGS+=' -D_FILE_OFFSET_BITS=64 -DLARGEFILE_SOURCE=1' ;;
     powerpc64le) _pyarch=ppc64le ;;
   esac
+
+  export CXXFLAGS+=' -D_GLIBCXX_USE_C99_STDIO=1'
 
   ./configure \
     --build=${CHOST} \
