* update kwallet to 5.95.0-1

--- a/kde/kwallet/PKGBUILD
+++ b/kde/kwallet/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwallet
-pkgver=5.93.0
+pkgver=5.95.0
 pkgrel=1
 pkgdesc='Secure and unified container for user passwords'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -14,11 +14,19 @@ depends=(knotifications kiconthemes kservice gpgme)
 makedepends=(extra-cmake-modules kdoctools boost doxygen qt5-tools qt5-doc)
 optdepends=('kwalletmanager: Configuration GUI')
 groups=(kf5)
-source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('ed56f6477efb250b454f7b7861a16a5ea972487c1373647b7094047ce20fddeb'
-            'SKIP')
+source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
+        kwallet-gpgme++-rewind-instead.patch)
+sha256sums=('2dcf2bbee473795055bcb11d9f7e717c77c9f827aa21fbd0c11cf64fbc2d65be'
+            'SKIP'
+            'd433155d744f8f7f36afe22ef1a4229a93f8dd847acc344925875fb721017a0e')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 options=(debug)
+
+prepare() {
+  cd ${pkgname}-${pkgver}
+  # off_t isn't great and we just rewind anyway
+  patch -Np1 -i ${srcdir}/kwallet-gpgme++-rewind-instead.patch
+}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
