* update plasma-desktop to 5.25.1-1

--- a/kde/plasma-desktop/PKGBUILD
+++ b/kde/plasma-desktop/PKGBUILD
@@ -11,7 +11,7 @@ arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-depends=(gawk kdelibs4support polkit-kde-agent kmenuedit systemsettings baloo xdg-user-dirs libibus)
+depends=(gawk kdelibs4support polkit-kde-agent kmenuedit systemsettings baloo xdg-user-dirs libibus libxkbfile)
 optdepends=('plasma-nm: Network manager applet'
             'powerdevil: power management, suspend and hibernate support'
             'kscreen: screen management'
