* update tbb to 2021.5.0-2

--- a/tbb/PKGBUILD
+++ b/tbb/PKGBUILD
@@ -7,7 +7,7 @@
 
 pkgname=tbb
 pkgver=2021.5.0
-pkgrel=1
+pkgrel=2
 pkgdesc='High level abstract threading library'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.threadingbuildingblocks.org/'
@@ -46,7 +46,7 @@ build() {
   export CXXFLAGS="$CXXFLAGS -Wno-error=uninitialized -Wno-error=address"
 
   case "${CARCH}" in
-    powerpcriscv64) EXTRA_CMAKE_FLAGS='-DCMAKE_CXX_FLAGS="-latomic"' ;;
+    powerpc) EXTRA_CMAKE_FLAGS='-DCMAKE_CXX_FLAGS="-latomic" -DTBB_STRICT=OFF' ;;
     riscv64) EXTRA_CMAKE_FLAGS='-DCMAKE_CXX_FLAGS="-latomic" -DTBB_TEST=OFF -DTBB_STRICT=OFF' ;;
     powerpc64le) EXTRA_CMAKE_FLAGS='-DTBB_STRICT=OFF' ;;
   esac
